# If-Only-I-Had-A-Brain

./: .gitignore  AUDIO-EQUATION.md  README.md  donate-gpu.bat  index.html  message (1).txt  message (2).txt  message (3).txt  message.txt  package.json  resume.md  unity is funny.md
.claude/: CLAUDE.md  CONSTRAINTS.md  statusline.sh
assets/: README.md
corpora/: aoa.tsv
deploy/: README.md  REDEPLOY-NOTES.md  bootstrap-backend.sh  nginx-unity-brain.conf  self-update.sh  unity-brain.service
docs/: ADMIN-CONTROLS.md  ARCHITECTURE.md  CHECKPOINT-WIPE-PLAN.md  CODE-CURRICULUM.md  COMP-todo.md  CURRICULUM-SCOPE-SEQUENCE.md  DECOMPOSED-curriculum-build.md  DOC-AUDIT.md  EQUATIONS.md  FINALIZED.md  HELD-BACK.md  HTML-ENTRY-POINTS.md  ISSUE-basin-collapse-fix.md  ISSUE-student-battery-stall.md  KNOWN_ISSUES.md  LAW-AUDIT.md  MEMORY-WALK.md  MINDSPACE-INTEGRATION.md  NOW.md  NewTodo.md  PERSONA.md  PUSH_WORKFLOW.md  Problems.md  RESUME.md  ROADMAP.md  SENSORY.md  SETUP.md  SKILL_TREE.md  SPONGE-BRAIN-SIZE-AND-AUTOSCALE-DONATED.md  SPONGE-COMMUNITY-COMPUTE-PANEL-FIX.md  SPONGE-DEPLOY-HANDOFF.md  SPONGE-DIRTY-AND-0GNS-DIAGNOSTIC-2026-06-30.md  SPONGE-DONOR-WORK-SHARING.md  SPONGE-FRESH-WALK-DEPLOY.md  SPONGE-HANDOFF.md  SPONGE-LINUX-DONOR-COMPAT-INVESTIGATION.md  SPONGE-PRE-FRESH-INSTALL-CHECKS.md  SPONGE-REDEPLOY-2026-06-27.md  SPONGE-RUNBOOK.md  SPONGE-SEM-MOTOR-SATURATION-HANDOFF.md  (+15 more)
donor-app/: BUILD-PLAN.md  Cargo.toml  README.md
donor-app/src/: cli.rs  compute.rs  config.rs  cuda.rs  cuda_kernels.cu  donor.rs  frames.rs  gpu.rs  gui.rs  kernels.ptx  main.rs  protocol.rs
donor-app/src/shaders/: lif.wgsl  plasticity.wgsl  spike_count.wgsl  synapse_propagate.wgsl
html/: brain-equations.html  compute.html  dashboard-public.html  dashboard.html  docs.html  gpu-configure.html  legend.html  minds-eye.html  unity-guide.html  webgpu-prep.html
js/: app.bundle.js  app.js  env.example.js  version.js  visual-feeder.js  voice-piper-worker.bundle.js  webgpu-prep.js
linux/: Savestart.sh  start.sh  stop.sh
scripts/: check-mixin-order.mjs  count-k-bigrams.mjs  find-uncovered-k-vocab.mjs  gate-walk-check.mjs  gpu-cpu-parity.mjs  measure-emergence.mjs  migrate-done-to-finalized.mjs  scan-dangling-imports.mjs  smoke-server-boot.mjs  social-shots.mjs  tu29-chatjs-viewer-edit.py  tu29-docs-edit.py  tu29-mindspace-edit.py  tu29-resume-now-edit.py  tu295-ceremony.py  tu295-docs-sweep.py  tu295-imagination-edit.py  tu296-imagegen-fix.py  tu297-brain-prompt.py  tu30-restart-interlock-fix.py  unity-chat-hold.mjs  unity-chat.mjs  unity-diag.mjs  unity-pulse.mjs  unity-say-live.mjs  unity-selfie-battery.mjs  unity-show-entity.mjs  unity-voice-demo.mjs  verify-emission.mjs  verify-realvocab-emission.mjs  verify-size-parity.mjs  verify-word-emission-fix.mjs  vox-build-bank.mjs  vox-side-test.mjs
server/: .last-boot-reason.json  SPONGE-COPY-PASTE-speak11.txt  SPONGE-COPY-PASTE-tu20.txt  SPONGE-COPY-PASTE-tu25.txt  SPONGE-COPY-PASTE-tu28-tu29-fallback.txt  SPONGE-COPY-PASTE-tu28.txt  brain-server.js  (+6 more)
(+203 files in other folders)
