[package]
name = "unity-donor"
version = "0.1.0"
edition = "2021"
description = "Native GPU compute donor for the Unity brain — versatile headless/GUI, cross-platform (Windows + Linux)."
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
wgpu = "24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# Placeholder for the M4 GUI (eframe/egui). Kept so the headless/GUI split is wired now;
# the eframe dep + window land in M4. `--no-default-features` is the pure-headless server build.
default = []
gui = []

[profile.release]
opt-level = 3
lto = "thin"
strip = true
