[package]
name = "unity-donor"
version = "0.1.0"
edition = "2021"
description = "Native GPU compute donor for the Unity brain — versatile headless/GUI, cross-platform (Windows + Linux)."
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
wgpu = "24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytemuck = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "signal"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"

[features]
# Placeholder for the M4 GUI (eframe/egui). `--no-default-features` is the pure-headless build.
default = []
gui = []

[profile.release]
opt-level = 3
lto = "thin"
strip = true
