[package]
name = "unity-donor"
version = "0.2.0"
edition = "2021"
description = "Native GPU compute donor for the Unity brain — versatile headless/GUI, cross-platform (Windows + Linux)."
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
wgpu = "24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
eframe = { version = "0.31", optional = true }
bytemuck = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "signal"] }
# native-tls => wss:// works. Cross-compiles cleanly: SChannel on the Windows target,
# system OpenSSL on Linux (no aws-lc-rs/cmake pain that rustls would add to the win-gnu build).
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
# CUDA backend (NVIDIA). dynamic-loading => links WITHOUT the CUDA toolkit and dlopens
# libcuda/libnvrtc at runtime, so the same binary runs on AMD/Intel hosts (CUDA just no-ops
# and we fall back to wgpu). Optional + feature-gated.
cudarc = { version = "0.16.6", default-features = false, features = ["std", "driver", "nvrtc", "dynamic-loading", "cuda-12040"], optional = true }

[features]
# default = GUI + CUDA. Headless WITH cuda: `--no-default-features --features cuda`.
# Pure portable headless (no CUDA, wgpu only — e.g. AMD build): `--no-default-features`.
default = ["gui", "cuda"]
gui = ["dep:eframe"]
cuda = ["dep:cudarc"]

[profile.release]
opt-level = 3
lto = "thin"
strip = true
